# shop

./: .env.sample  .gitignore  README.md  pyproject.toml
blog/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
blog/management/commands/: fill_blog.py
blog/migrations/: 0001_initial.py  0002_article_owner.py  0002_rename_arcticle_article.py  0003_article_is_published_alter_article_published_at.py  0004_alter_article_options_alter_article_slug_and_more.py  0005_alter_article_slug.py  0006_alter_article_slug.py
blog/templates/blog/: article_confirm_delete.html  article_detail.html  article_form.html  article_list.html  contacts.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: fill_catalog.py  fill_tables.py
catalog/migrations/: 0001_initial.py  0002_contacts.py  0002_initial.py  0002_product_manufactured_at.py  0003_alter_category_options_alter_product_category_and_more.py  0003_alter_product_options_product_is_published.py  0004_alter_product_options.py  0004_alter_version_name_alter_version_product.py  0005_alter_product_options.py  0005_alter_version_product.py  0006_alter_version_options.py  0006_alter_version_product.py
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
fixtures/: auth.json  group_perm.json
fixtures/blog/: articles.json
fixtures/catalog/: cats.json  contacts.json  products.json
templates/: base.html
templates/includes/: main_menu.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
(+18 files in other folders)
